// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strict-tuples > typescript > report mutating tuple length methods 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 8,
      "endLine": 2,
      "line": 2,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 3,
      "line": 3,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 4,
      "line": 4,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 18,
      "endLine": 5,
      "line": 5,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 6,
      "line": 6,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 8,
      "line": 8,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 9,
      "line": 9,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 10,
      "line": 10,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 23,
      "endLine": 11,
      "line": 11,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 18,
      "endLine": 12,
      "line": 12,
      "message": "Modifying the length of a tuple is not allowed.",
      "messageId": "mutateLength",
      "nodeType": "CallExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
  ],
  "output": "var x: [number, number] = [5, 6];
x.pop();
x.push(3);
x.shift();
x.splice(0, 1, 9);
x.unshift(6);
var y: [{ z: [number, number] }] = [{ z: [3, 7] }];
y[0].z.pop();
y[0].z.push(3);
y[0].z.shift();
y[0].z.splice(0, 1, 9);
y[0].z.unshift(6);",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 8,
          "endLine": 2,
          "line": 2,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 3,
          "line": 3,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 4,
          "line": 4,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 18,
          "endLine": 5,
          "line": 5,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 6,
          "line": 6,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 8,
          "line": 8,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 9,
          "line": 9,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 10,
          "line": 10,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 23,
          "endLine": 11,
          "line": 11,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 18,
          "endLine": 12,
          "line": 12,
          "message": "Modifying the length of a tuple is not allowed.",
          "messageId": "mutateLength",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
      ],
      "output": "var x: [number, number] = [5, 6];
x.pop();
x.push(3);
x.shift();
x.splice(0, 1, 9);
x.unshift(6);
var y: [{ z: [number, number] }] = [{ z: [3, 7] }];
y[0].z.pop();
y[0].z.push(3);
y[0].z.shift();
y[0].z.splice(0, 1, 9);
y[0].z.unshift(6);",
    },
  ],
}
`;

exports[`strict-tuples > typescript > stress tests > deep types 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 5,
      "endColumn": 42,
      "endLine": 42,
      "line": 42,
      "message": "Type 'ManyProps<DeepMap<DeepMap<DeepMap<DeepMap<{ foo: [number]; }, "A">, "B">, "C">, "D">> | undefined' is not assignable to type 'ManyProps<DeepMap<DeepMap<DeepMap<DeepMap<{ foo: number[]; }, "A">, "B">, "C">, "D">> | undefined'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
  ],
  "output": "interface ManyProps<T> {
  a?: T;
  b?: [number, T];
  c?: [string, T];
  d?: [boolean, T];
  e?: [bigint, T];
  f?: [symbol, T];
  g?: T[];
  h?: () => T;
  i?: (x: number) => T;
  j?: (x: string) => T;
  k?: (x: boolean) => T;
  l?: (x: bigint) => T;
  m?: (x: symbol) => T;
  n?: (x: number, y: number) => T;
  o?: (x: string, y: string) => T;
  p?: (x: boolean, y: boolean) => T;
  q?: (x: bigint, y: bigint) => T;
  r?: (x: symbol, y: symbol) => T;
  s?: (x: null, y: null) => T;
  t?: T[][];
  u?: T[][][];
  v?: (() => T)[];
  w?: (() => () => T)[];
  x?: (() => () => () => T)[];
  y?: { t: T };
  z?: { t: { t: T } };
}

type DeepMap<T, U> = {
    value?: U,
    props?: ManyProps<T>,
}

type DeepMapper<T, US> = US extends [infer U, ...infer URest] ? DeepMapper<DeepMap<T, U>, URest> : T;

// add new entries to the array to test how deep it can handle within ~2s
// (not 10s because it may slow down when running all tests)
type Deepify<T> = DeepMapper<T, ["A", "B", "C", "D", "E"]>;

var foo: Deepify<{ foo: [number] }> = {} as Deepify<{ foo: [number] }>;
var bar: Deepify<{ foo: number[] }> = foo;",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 5,
          "endColumn": 42,
          "endLine": 42,
          "line": 42,
          "message": "Type 'ManyProps<DeepMap<DeepMap<DeepMap<DeepMap<{ foo: [number]; }, "A">, "B">, "C">, "D">> | undefined' is not assignable to type 'ManyProps<DeepMap<DeepMap<DeepMap<DeepMap<{ foo: number[]; }, "A">, "B">, "C">, "D">> | undefined'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
      ],
      "output": "interface ManyProps<T> {
  a?: T;
  b?: [number, T];
  c?: [string, T];
  d?: [boolean, T];
  e?: [bigint, T];
  f?: [symbol, T];
  g?: T[];
  h?: () => T;
  i?: (x: number) => T;
  j?: (x: string) => T;
  k?: (x: boolean) => T;
  l?: (x: bigint) => T;
  m?: (x: symbol) => T;
  n?: (x: number, y: number) => T;
  o?: (x: string, y: string) => T;
  p?: (x: boolean, y: boolean) => T;
  q?: (x: bigint, y: bigint) => T;
  r?: (x: symbol, y: symbol) => T;
  s?: (x: null, y: null) => T;
  t?: T[][];
  u?: T[][][];
  v?: (() => T)[];
  w?: (() => () => T)[];
  x?: (() => () => () => T)[];
  y?: { t: T };
  z?: { t: { t: T } };
}

type DeepMap<T, U> = {
    value?: U,
    props?: ManyProps<T>,
}

type DeepMapper<T, US> = US extends [infer U, ...infer URest] ? DeepMapper<DeepMap<T, U>, URest> : T;

// add new entries to the array to test how deep it can handle within ~2s
// (not 10s because it may slow down when running all tests)
type Deepify<T> = DeepMapper<T, ["A", "B", "C", "D", "E"]>;

var foo: Deepify<{ foo: [number] }> = {} as Deepify<{ foo: [number] }>;
var bar: Deepify<{ foo: number[] }> = foo;",
    },
  ],
}
`;

exports[`strict-tuples > typescript > tuple types can't be assigned to array types 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 5,
      "endColumn": 28,
      "endLine": 3,
      "line": 3,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 4,
      "line": 4,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "AssignmentExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 27,
      "endLine": 6,
      "line": 6,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 29,
      "endColumn": 51,
      "endLine": 6,
      "line": 6,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 37,
      "endLine": 8,
      "line": 8,
      "message": "Type '[number, number]' is not assignable to type 'number[] | null'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 78,
      "endLine": 9,
      "line": 9,
      "message": "Type '[number, number] | null' is not assignable to type 'number[] | null | undefined'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
  ],
  "output": "var tuple: [number, number] = [1, 2];

var array: number[] = tuple;
array = tuple;

var arr2: number[] = tuple, arr3: number[] = tuple;

var toUnion: number[] | null = tuple;
var fromUnion: number[] | null | undefined = tuple as [number, number] | null;",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 5,
          "endColumn": 28,
          "endLine": 3,
          "line": 3,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 4,
          "line": 4,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 27,
          "endLine": 6,
          "line": 6,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 29,
          "endColumn": 51,
          "endLine": 6,
          "line": 6,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 37,
          "endLine": 8,
          "line": 8,
          "message": "Type '[number, number]' is not assignable to type 'number[] | null'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 78,
          "endLine": 9,
          "line": 9,
          "message": "Type '[number, number] | null' is not assignable to type 'number[] | null | undefined'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
      ],
      "output": "var tuple: [number, number] = [1, 2];

var array: number[] = tuple;
array = tuple;

var arr2: number[] = tuple, arr3: number[] = tuple;

var toUnion: number[] | null = tuple;
var fromUnion: number[] | null | undefined = tuple as [number, number] | null;",
    },
  ],
}
`;

exports[`strict-tuples > typescript > tuple types can't be assigned to nested array types 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 5,
      "endColumn": 49,
      "endLine": 3,
      "line": 3,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 20,
      "endLine": 4,
      "line": 4,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "AssignmentExpression",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 71,
      "endLine": 6,
      "line": 6,
      "message": "Type '[number, number]' is not assignable to type 'number[] | undefined'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 68,
      "endLine": 8,
      "line": 8,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 66,
      "endLine": 9,
      "line": 9,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 106,
      "endLine": 11,
      "line": 11,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 104,
      "endLine": 12,
      "line": 12,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 98,
      "endLine": 14,
      "line": 14,
      "message": "Type '[number, number]' is not assignable to type 'number[]'.",
      "messageId": "assignToArray",
      "nodeType": "VariableDeclarator",
      "ruleId": "strict-tuples",
      "severity": 2,
    },
  ],
  "output": "var tuple: [number, number] = [1, 2];

var nested: { nums: number[] } = { nums: tuple };
nested.nums = tuple;

var mappedType: { [K in "foo" | "bar"]?: number[] } = { "foo": tuple };

var strIndexSignature: { [x: string]: number[] } = { "foo": tuple };
var numIndexSignature: { [x: number]: number[] } = { 100: tuple };

var strIndexSignature2: { [x: string]: number[] } = { "foo": tuple } as { [x: string]: [number, number] };
var numIndexSignature2: { [x: number]: number[] } = { 100: tuple } as { [x: number]: [number, number] };

var doubleNested: { foo: number[], bar: { baz: number[] } } = { foo: tuple, bar: { baz: tuple } };",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 5,
          "endColumn": 49,
          "endLine": 3,
          "line": 3,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 20,
          "endLine": 4,
          "line": 4,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 71,
          "endLine": 6,
          "line": 6,
          "message": "Type '[number, number]' is not assignable to type 'number[] | undefined'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 68,
          "endLine": 8,
          "line": 8,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 66,
          "endLine": 9,
          "line": 9,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 106,
          "endLine": 11,
          "line": 11,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 104,
          "endLine": 12,
          "line": 12,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 98,
          "endLine": 14,
          "line": 14,
          "message": "Type '[number, number]' is not assignable to type 'number[]'.",
          "messageId": "assignToArray",
          "nodeType": "VariableDeclarator",
          "ruleId": "rule-to-test/strict-tuples",
          "severity": 2,
        },
      ],
      "output": "var tuple: [number, number] = [1, 2];

var nested: { nums: number[] } = { nums: tuple };
nested.nums = tuple;

var mappedType: { [K in "foo" | "bar"]?: number[] } = { "foo": tuple };

var strIndexSignature: { [x: string]: number[] } = { "foo": tuple };
var numIndexSignature: { [x: number]: number[] } = { 100: tuple };

var strIndexSignature2: { [x: string]: number[] } = { "foo": tuple } as { [x: string]: [number, number] };
var numIndexSignature2: { [x: number]: number[] } = { 100: tuple } as { [x: number]: [number, number] };

var doubleNested: { foo: number[], bar: { baz: number[] } } = { foo: tuple, bar: { baz: tuple } };",
    },
  ],
}
`;
